# webrtc

./: .gclient  .gclient_entries  AUTHORS  BUILD.gn  README.caffeine
.github/workflows/: windows.yml
caffeine/: BUILD.gn  OWNERS  README.md  audiodevice.cc  audiodevice.h  audiodevicedefaultimpl.h  broadcast.cc  broadcast.h  broadcastaudiodevice.cc  broadcastaudiodevice.h  broadcastvideocapturer.cc  broadcastvideocapturer.h  caffeine.cc  caffeine.def  caffeine.h  iceinfo.h  interface.cc  interface.h  logsink.cc  logsink.h  peerconnectionobserver.cc  peerconnectionobserver.h  sessiondescriptionobserver.cc  sessiondescriptionobserver.h  stream.cc  stream.h  videocapturer.cc  videocapturer.h  x264encoder.cc  x264encoder.h
examples/androidapp/src/org/appspot/apprtc/: AppRTCAudioManager.java
modules/audio_device/android/: opensles_player.cc
modules/audio_device/android/java/src/org/webrtc/voiceengine/: WebRtcAudioTrack.java
rtc_base/: logging.cc  logging.h
sdk/android/src/java/org/webrtc/audio/: WebRtcAudioTrack.java
sdk/android/src/jni/audio_device/: opensles_player.cc
