# Copyright (c) 2018 Caffeine Inc.
# All rights reserved

import("../webrtc.gni")

group("caffeine") {
  deps = [
    ":caffeine-rtc"
  ]
}

rtc_shared_library("caffeine-rtc") {
  sources = [
    "caffeine.def",
  ]

  deps = [
    ":caffeine-rtc-static",
  ]
}

rtc_static_library("caffeine-rtc-static") {
  sources = [
    "audiodevicedefaultimpl.h",
    "broadcast.cc",
    "broadcast.h",
    "broadcastaudiodevice.cc",
    "broadcastaudiodevice.h",
    "caffeine.cc",
    "caffeine.h",
    "interface.cc",
    "interface.h",
    "logsink.cc",
    "logsink.h",
    "peerconnectionobserver.cc",
    "peerconnectionobserver.h",
    "sessiondescriptionobserver.cc",
    "sessiondescriptionobserver.h",
  ]

  if (!build_with_chromium && is_clang) {
    # Suppress warnings from the Chromium Clang plugin (bugs.webrtc.org/163).
    suppressed_configs += [ "//build/config/clang:find_bad_constructs" ]
  }

  deps = [
    "../api/audio_codecs:builtin_audio_decoder_factory",
    "../api/audio_codecs:builtin_audio_encoder_factory",
    "../api/video_codecs:builtin_video_decoder_factory",
    "../api/video_codecs:builtin_video_encoder_factory",
    "../pc:libjingle_peerconnection",
    "../third_party/libyuv",
    "../third_party/jsoncpp",
    "../system_wrappers:runtime_enabled_features_default",
    "../system_wrappers:field_trial_default",
    "../system_wrappers:metrics_default",
    "../pc:rtc_pc",
  ]
}
